[gd_scene load_steps=17 format=3 uid="uid://dbe25r5mgvr2l"]

[ext_resource type="Script" uid="uid://v0kcqljto8n0" path="res://menus/player_ui/player_ui.gd" id="1_0aiwo"]
[ext_resource type="Shader" uid="uid://cs0nu8w547cet" path="res://shaders/fog.gdshader" id="1_x0k1s"]
[ext_resource type="Shader" uid="uid://bl5uc6al1uuod" path="res://shaders/vignette.gdshader" id="2_0aiwo"]
[ext_resource type="Script" uid="uid://lpje8g418wbk" path="res://menus/player_ui/game_timer.gd" id="3_im4b0"]
[ext_resource type="PackedScene" uid="uid://cbv2e8v2yjmtk" path="res://menus/level_finished_window.tscn" id="4_0moda"]
[ext_resource type="Texture2D" uid="uid://dcyujtshfbpyu" path="res://assets/ui/main_theme/pause.png" id="5_bi0eb"]
[ext_resource type="PackedScene" uid="uid://rvcpqoy6yteb" path="res://menus/tutorial_panel_container.tscn" id="5_u1wr6"]
[ext_resource type="Script" uid="uid://chq86xw3eirpr" path="res://components/ui/sound_buttons/sound_button.gd" id="6_c71ri"]

[sub_resource type="Gradient" id="Gradient_ei405"]
offsets = PackedFloat32Array(0, 0.15714286)
colors = PackedColorArray(0, 0.8784314, 0.3019608, 1, 1, 1, 1, 0)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_e8dv2"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_2nhjh"]
noise = SubResource("FastNoiseLite_e8dv2")
color_ramp = SubResource("Gradient_ei405")
seamless = true

[sub_resource type="Gradient" id="Gradient_bjha6"]
offsets = PackedFloat32Array(0, 0.5107143)
colors = PackedColorArray(0, 0.3529412, 0, 0.84313726, 0, 0.78039217, 0, 0)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_fs4d3"]
noise_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7vxoj"]
noise = SubResource("FastNoiseLite_fs4d3")
color_ramp = SubResource("Gradient_bjha6")
seamless = true
invert = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ta5nu"]
shader = ExtResource("1_x0k1s")
shader_parameter/pos = Vector2(0, 0)
shader_parameter/textureResolution = 512.0
shader_parameter/moveDir = Vector2(-1, -0.4)
shader_parameter/noise = SubResource("NoiseTexture2D_2nhjh")
shader_parameter/noise2 = SubResource("NoiseTexture2D_7vxoj")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e8dv2"]
shader = ExtResource("2_0aiwo")
shader_parameter/outerRadius = 1.59600007581
shader_parameter/MainAlpha = 0.80400003819
shader_parameter/vignette_color = Color(0.08114017, 0.19977546, 4.813075e-08, 1)

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_0aiwo")

[node name="fog" type="ColorRect" parent="."]
modulate = Color(0.005322846, 0.32502773, 1.92523e-07, 1)
show_behind_parent = true
z_index = 2
material = SubResource("ShaderMaterial_ta5nu")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -79.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_e8dv2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopRowContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TimePanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/TopRowContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.9019608)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopRowContainer/TimePanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="GameTimer" type="Label" parent="MarginContainer/VBoxContainer/TopRowContainer/TimePanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "00:00.00"
horizontal_alignment = 1
script = ExtResource("3_im4b0")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopRowContainer"]
layout_mode = 2
theme_override_constants/margin_left = -6
theme_override_constants/margin_top = 6

[node name="PauseButton" type="Button" parent="MarginContainer/VBoxContainer/TopRowContainer/MarginContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_type_variation = &"OrangeButton"
icon = ExtResource("5_bi0eb")
script = ExtResource("6_c71ri")
metadata/_custom_type_script = "uid://chq86xw3eirpr"

[node name="TutorialPanelContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("5_u1wr6")]
layout_mode = 2

[node name="LevelFinishedWindow" parent="." instance=ExtResource("4_0moda")]
unique_name_in_owner = true
visible = false
